--- a/ndk-cache-dexie/package.json
+++ b/ndk-cache-dexie/package.json
@@ -3,6 +3,7 @@
     "version": "2.5.0",
     "description": "NDK Dexie Cache Adapter",
     "license": "MIT",
+    "docs": "typedoc",
     "bugs": {
         "url": "https://github.com/nostr-dev-kit/ndk-cache-dexie/issues"
     },
@@ -49,7 +50,9 @@
         "jest": "^29.7.0",
         "prettier": "^3.0.1",
         "ts-jest": "^29.1.5",
-        "tsup": "^7.2.0"
+        "tsup": "^7.2.0",
+        "typedoc": "^0.26.3",
+        "typedoc-plugin-markdown": "^4.1.1"
     },
     "dependencies": {
         "@nostr-dev-kit/ndk": "workspace:*",
