apply limit filter

--- a/ndk-cache-dexie/tsconfig.json
+++ b/ndk-cache-dexie/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "@nostr-dev-kit/tsconfig/ndk-cache-dexie.json",
+    "extends": "../packages/tsconfig/ndk-cache-dexie.json",
     "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts"],
     "exclude": ["dist", "build", "node_modules"]
 }
