--- a/ndk-svelte-components/package.json
+++ b/ndk-svelte-components/package.json
@@ -84,6 +84,7 @@
     "rehype-autolink-headings": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "sanitize-html": "^2.11.0",
+    "svelte-asciidoc": "^0.0.2",
     "svelte-preprocess": "^5.0.4",
     "svelte-time": "^0.8.3"
   },
